# group_assignment

./: Cargo.toml  LICENSE-MIT  README.md
src/: README.md  lib.rs
src/assigners/: mod.rs
src/assigners/first_come_first_served/: mod.rs
src/assigners/propose_and_reject/: mod.rs
src/assigners/propose_and_reject/proposals/: mod.rs
src/assignment/: errors.rs  group_management.rs  mod.rs
src/assignment/assigners/: mod.rs
src/assignment/assigners/first_come_first_served/: mod.rs
src/assignment/assigners/propose_and_reject/: mod.rs
src/assignment/assigners/propose_and_reject/proposals/: mod.rs
src/assignment/assigners/propose_and_reject/proposals/offers/: mod.rs
src/groups/: mod.rs  test_utils.rs
src/groups_of_subjects/: mod.rs  test_utils.rs
src/groups_of_subjects/assignments/: first_come_first_served.rs  mod.rs
src/groups_of_subjects/proposals/: mod.rs  offers.rs
src/subjects/: mod.rs  test_utils.rs
